# orchestration-cost

./: README.md  daemon.json  install-docker.sh  install-go.sh  install-helm.sh  install-kubeadm.sh  install-wasm-tools.sh  tools.sh  version.sh
benchmarking/: .gitignore  README.md  calculate_orch_cost_metric.py  create_latex_tables.py  definitions.py  hey_server.py  print_startups.py  test.py  worker_server.py
containerd/: config.toml  configure.sh  hosts.toml  install-cni.sh  install-spin-shim.sh  k3s-registries.yaml
k0s-infra/: install.sh
k3s-infra/: install.sh
knative-infra/: README.md  ai-service.yaml  go-service.yaml  install-knative.sh  kourier.yaml  rust-service.yaml
kube-edge-infra/: README.md  cloudcore-default.yaml  cloudcore-min.yaml  cloudcore.yaml  edgeconfig-default.yaml  edgeconfig-min.yaml  edgeconfig.yaml  edgemesh-agent-04-configmap.yaml  gateway-agent-04-configmap.yaml  go-deploy.yaml  install-edgemesh.sh  install-kubeedge.sh  rust-deploy.yaml
native-infra/: README.md  ai-hpa-deploy.yaml  ai-kubeedge-deploy.yaml  go-deployment.yaml  go-hpa-deploy.yaml  go-kubeedge-deploy.yaml  go-service.yaml  init-node.sh  rust-deployment.yaml  rust-hpa-deploy.yaml  rust-kubeedge-deploy.yaml  rust-service.yaml
nginx-ingress/: README.md  adapter-config.yaml  install.sh  prom.yaml  (+1 more)
servers/spin-ai/: Cargo.toml  Makefile  spin-ai-server.yaml  spin.toml
servers/spin-ai/src/: image_recognition.rs  lib.rs
servers/wasm-v2-ai/: Cargo.toml  Makefile  README.md  deployment.yaml
servers/wasm-v2-ai/.wash/: config.yaml
servers/wasm-v2-ai/src/: lib.rs
(+4600 files in other folders)
