[package]
name = "hello-world"
edition = "2024"
version = "0.1.0"

[workspace]

[lib]
crate-type = ["cdylib"]

[dependencies]
wstd = "0.6.3"
tract-onnx = "0.22.1"
image = "0.24.1"
smallvec = "1.15.1"
compute = "0.2.3"

[dependencies.ort]
version = "=2.0.0-rc.12"
default-features = false # Disables the `download-binaries` feature since we don't need it
features = [
    "std",
    "ndarray",
    "alternative-backend"
]
